--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_view_model">ViewModel</string>
     <string name="btn_live_data">LiveData</string>
     <string name="btn_live_data_fragment">LiveDataFragment</string>
+    <string name="btn_room">Room</string>
 
     <string name="fragment_main_tv_hint">hello main</string>
     <string name="fragment_main_btn_to_second_fragment">ToSecond</string>
