--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="btn_live_data_fragment">LiveDataFragment</string>
     <string name="btn_room">Room</string>
     <string name="btn_live_data_view_model_room">LiveData+ViewModel+Room</string>
+    <string name="btn_work_manager">WorkManager</string>
 
     <string name="fragment_main_tv_hint">hello main</string>
     <string name="fragment_main_btn_to_second_fragment">ToSecond</string>
