--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="btn_live_data_view_model_room">LiveData+ViewModel+Room</string>
     <string name="btn_work_manager">WorkManager</string>
     <string name="btn_data_binding">DataBinding</string>
+    <string name="btn_two_way_binding">DataBinding双向绑定</string>
+    <string name="btn_recycle_view_binding">DataBinding-Recycler绑定</string>
 
     <string name="fragment_main_tv_hint">hello main</string>
     <string name="fragment_main_btn_to_second_fragment">ToSecond</string>
