初识Paging - ItemKeyedDataSource的使用方法

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="btn_recycle_view_binding">DataBinding-Recycler绑定</string>
     <string name="btn_paging_positional">Paging - Positional</string>
     <string name="btn_paging_page_keyed">Paging - PageKeyed</string>
+    <string name="btn_paging_item_keyed">Paging - ItemKeyed</string>
 
     <string name="fragment_main_tv_hint">hello main</string>
     <string name="fragment_main_btn_to_second_fragment">ToSecond</string>
